Thu Sep  6 01:16:44 2001  Christopher Faylor <cgf@cygnus.com>

	Move appropriate variables to NO_COPY segment, throughout.

Thu Sep  6 00:40:35 2001  Christopher Faylor <cgf@cygnus.com>

	Remove initialization of static or global values to zero, throughout.
	This just needlessly grows the size of the DLL.
	* tty.cc (tty::alive): Make inuse handle non-inheriting on open, just
	for thread safety.

Wed Sep  5 23:36:03 2001  Christopher Faylor <cgf@cygnus.com>

	* cygheap.h (init_cygheap): Move bucket array here from cygheap.cc.
	* cygheap.cc: Throughout use bucket array from cygheap.

	* sigproc.cc (proc_subproc): Dynamically allocate zombie buffer to save
	DLL space.
	(sigproc_fixup_after_fork): Free zombie array after a fork.
	* sigproc.h (sigproc_fixup_after_fork): Declare.

2001-09-06  Egor Duda  <deo@logos-m.ru>

	* dir.cc (mkdir): Expand buffer for security descriptor to 4K to avoid
	stack corruption.
	* fhandler.cc (fhandler_base::open): Ditto.
	* path.cc (symlink): Ditto.

Wed Sep  5 21:35:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* winver.rc: Change copyright to include 2001.

Wed Sep  5 12:12:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_floppy::lseek): Remove iswinnt check.

Wed Sep  5 11:34:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::close): Change 2MSL value
	according to MSDN.

Wed Sep  5 10:14:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* net.cc (cygwin_connect): Add WSAEALREADY and WSAEINVAL handling
	for non-blocking sockets.

Tue Sep  4 22:42:13 2001  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (ctrl_c_handler): Only send SIGINT when we have a
	controlling terminal and we are the head of the process group.

Tue Sep  4 16:48:14 2001  Christopher Faylor <cgf@cygnus.com>

	* thread.cc (InterlockedExchangePointer): Don't define if it already
	exists.

Tue Sep  4 22:14:00 2001  Corinna Vinschen <corinna@vinschen.de>
